# movement_pipeline

./: .buildinfo  .readthedocs.yaml  CMakeLists.txt  README.md  genindex.html  index.html  install.html  package.xml  searchindex.js
.doctrees/: environment.pickle  index.doctree  install.doctree  overview.doctree  start.doctree
.github/workflows/: publish_docs_on_gh_pages.yaml
_sources/: start.rst.txt
cfg/: JointMovement.cfg
docs/: conf.py
docs/_build/doctrees/: environment.pickle  install.doctree  overview.doctree  start.doctree  support.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  overview.html  search.html  searchindex.js  start.html
docs/_build/html/_sources/: install.rst.txt  start.rst.txt
docs/source/: index.rst  overview.rst
docs/source/_build/doctrees/: index.doctree
docs/source/_build/html/: searchindex.js  support.html
launch/: movement_pipeline.launch
src/: joint_base_test.py  joint_movement.py  statemachine.py
src/states/: robot_control.py
