<?xml version="1.0"?>
<package format="2">
  <name>movement_pipeline</name>
  <version>0.0.0</version>
  <description>The movement_pipeline package</description>

  <maintainer email="v4r@todo.todo">v4r</maintainer>

  <license>Beer-Ware License</license>

  <build_depend>dynamic_reconfigure</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
